contacts files were putted into the folder

--- a/src/components/ContactsComponentData/ContactsGallery/Contacts.module.css
+++ b/src/components/ContactsComponentData/ContactsGallery/Contacts.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width:100svw;
     width:100%;
-    background-image:url('../../assets/images/ContactsBG.png');
+    background-image:url('../../../assets/images/ContactsBG.png');
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
