--- a/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -377,7 +377,7 @@
         height:100%;
     }
 }
-.map__div{
+/* .map__div{
     @media(min-width:1050px){
         padding-left:2%;
         padding-right:2%;
@@ -387,9 +387,8 @@
         align-items:center;
         justify-content:center;
         min-height:350px;
-        /* background-color:rgba(85,122,161,0.3); */
     }
-}
+} */
 
 .country__name{
     font-size: 16px;
