--- a/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -358,14 +358,14 @@
         padding-left:1%;
     }
 }
-
+/* 
 .map__section{
     @media(min-width:1050px){
         padding-right:30px;
         display:flex;
     }
-}
-.map__way{
+} */
+/* .map__way{
     @media(max-width:1050px){
         background-color:inherit;
         display:none;
@@ -376,7 +376,7 @@
         width:100%;
         height:100%;
     }
-}
+} */
 /* .map__div{
     @media(min-width:1050px){
         padding-left:2%;
