--- a/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
+++ b/src/components/MainPageComponents/Calculation_shipment_1step/CalculationShipment_1step.module.css
@@ -359,12 +359,12 @@
     }
 }
 
-.map__section{
+/* .map__section{
     @media(min-width:1050px){
         padding-right:30px;
         display:flex;
     }
-} 
+}  */
 /* .map__way{
     @media(max-width:1050px){
         background-color:inherit;
