--- a/src/components/MainPageComponents/OrderForm/OrderForm.module.css
+++ b/src/components/MainPageComponents/OrderForm/OrderForm.module.css
@@ -82,14 +82,13 @@
 .form__container_paddings{
     @media(max-width:1600px){
         padding-left:5%;
-        padding-right:5%;
+        padding-right:5%; 
         display:flex;
         align-items:center;
         justify-content:center;
     }
 }
-.form__text_container{
-    
+/* .form__text_container{
     @media(max-width:1050px){
         padding-bottom:35px;
         text-align:center;
@@ -101,7 +100,7 @@
     @media(min-width:1500px){
         padding-bottom:60px;
     }
-}
+} */
 .form__pict_container{
     display:flex;
 }
