--- a/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
+++ b/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
@@ -130,6 +130,7 @@
 .contacts_container_inputs{
     display: grid;
     grid-template-columns: 50% 50%;
+    max-width:678px;
     
     @media(max-width:800px){
         padding-left: 2%;
@@ -229,13 +230,14 @@
         /* gap:20px; */
         overflow:auto;
     }
-    @media(min-width:501px) and (max-width:1500px){
+    @media(min-width:501px) and (max-width:1100px){
         display:flex;
         flex-direction:column;
         gap:32px;
     }
-    @media(min-width:1501px){
-        
+    @media(min-width:1101px){
+        display:flex;
+        gap:20px;
     }
 }
 .contacts__list_container{
