--- a/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
+++ b/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
@@ -236,8 +236,13 @@
         gap:32px;
     }
     @media(min-width:1101px){
-        display:flex;
-        gap:20px;
+        /* display:flex;
+        column-gap:2%;
+        width:100%; */
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap:1%;
+        width: 100%;
     }
 }
 .contacts__list_container{
@@ -269,39 +274,65 @@
         /* max-width:512px;
         height:530px; */
     }
-    @media(min-width:501px) and (max-width:1500px){
+    @media(min-width:501px) and (max-width:600px){
+        display:grid;
+        grid-template-columns: 40% 60%;
+        width:100%;
+    }
+    @media(min-width:601px) and (max-width:800px){
+        display:grid;
+        grid-template-columns: 30% 70%;
+        width:100%;
+    }
+    @media(min-width:801px) {
         display:flex;
         align-items:center;
         width:100%;
     }
-    @media(min-width:1501px){
-        
-    }
 }
+
 
 .contacts__list_container_info{
     @media(max-width:500px){
         padding: 45px 24px;
     }
     @media(min-width:501px) and (max-width:1500px){
+        padding-top: 20px;
         padding-left:5%;
-        
     }
     @media(min-width:1501px){
-        
+        padding:40px 30px;
     }
 }
 .contacts__photo{
     width:100%;
+    height: 100%;
+    @media(max-width:501px){
+        width:100%;
+    }
+    @media(min-width:501px) and (max-width:1200px){
+        width:100%;
+    }
+    @media(min-width:1201px) and (max-width:1300px){
+        height: 200px;
+    }
+    @media(min-width:1301px){
+        min-height: 253px;
+    }
 }
 .contacts__name{
     color: #9FCCFF;
     font-style: normal;
     font-weight: 500;
-    @media(max-width:800px){
+    @media(max-width:500px){
         font-size: 22px;
         line-height: 22px; /* 100% */
         padding-bottom:8px;
+    }
+    @media(min-width:501px) and (max-width:800px){
+        font-size: 18px;
+        line-height: 22px; /* 100% */
+        padding-bottom:10px;
     }
     @media(min-width:801px) and (max-width:1500px){
         font-size: 22px;
@@ -309,7 +340,8 @@
         padding-bottom:10px;
     }
     @media(min-width:1501px){
-        
+        font-size: 22px;
+        padding-bottom:16px;
     }
 }
 .contacts__description{
@@ -321,13 +353,11 @@
         line-height: 15px; /* 150% */
         padding-bottom:8px;
     }
-    @media(min-width:801px) and (max-width:1500px){
+    @media(min-width:801px){
         font-size: 14px;
         line-height: 20px; /* 150% */
         padding-bottom:30px;
-    }
-    @media(min-width:1501px){
-        
+        /* padding-right: 10px; */
     }
 }
 .contacts__phone{
@@ -337,20 +367,11 @@
         
         padding-bottom:8px;
     }
-    @media(min-width:801px) and (max-width:1300px){
-        
-    }
-    @media(min-width:1301px){
-        
+    @media(min-width:801px){
+        padding-bottom:12px;
     }
 }
-/* .contacts__phone_icon{
-    @media(min-width:801px){
-        display:none;
-        visibility:hidden;
-    }
 
-} */
 .contacts__phone_text{
     color: #BCC9DA;
     font-style: normal;
@@ -359,13 +380,11 @@
         font-size: 13px;
         line-height: 18px; /* 150% */
     }
-    @media(min-width:801px) and (max-width:1500px){
+    @media(min-width:801px){
         font-size: 16px;
         line-height: 24px; /* 150% */
     }
-    @media(min-width:1501px){
-        
-    }
+   
 }
 .contacts__mail_text{
     color: #BCC9DA;
@@ -374,12 +393,8 @@
     line-height: 24px; /* 150% */
     @media(max-width:800px){
         font-size: 13px;
-        
     }
     @media(min-width:801px) and (max-width:1500px){
         font-size: 16px;
-    }
-    @media(min-width:1501px){
-        
     }
 }
