--- a/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
+++ b/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
@@ -229,11 +229,13 @@
         height:100%;
         /* gap:20px; */
         overflow:auto;
+        padding-bottom: 20px;
     }
     @media(min-width:501px) and (max-width:1100px){
         display:flex;
         flex-direction:column;
         gap:32px;
+        padding-bottom: 40px;
     }
     @media(min-width:1101px){
         /* display:flex;
@@ -243,6 +245,7 @@
         grid-template-columns: 50% 50%;
         gap:1%;
         width: 100%;
+        padding-bottom: 40px;
     }
 }
 .contacts__list_container{
@@ -298,6 +301,7 @@
     }
     @media(min-width:501px) and (max-width:1500px){
         padding-top: 20px;
+        padding-bottom: 20px;
         padding-left:5%;
     }
     @media(min-width:1501px){
@@ -310,8 +314,13 @@
     @media(max-width:501px){
         width:100%;
     }
-    @media(min-width:501px) and (max-width:1200px){
+    @media(min-width:501px) and (max-width:1100px){
         width:100%;
+
+    }
+    @media(min-width:1101px) and (max-width:1200px){
+        width:100%;
+        height: 200px;
     }
     @media(min-width:1201px) and (max-width:1300px){
         height: 200px;
@@ -396,5 +405,21 @@
     }
     @media(min-width:801px) and (max-width:1500px){
         font-size: 16px;
+    }
+}
+
+.arrowsBottom_container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.contact__container_pages{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:4px;
+    @media(max-width:800px){
+        display: none;
+        visibility: hidden;
     }
 }
