--- a/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
+++ b/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
@@ -47,11 +47,11 @@
     @media(min-width:501px){
         padding-left:2%;
         padding-right:2%;
-        padding-bottom:60px;
     }
     @media(min-width:1500px){
         padding-bottom:120px;
     }
+    padding-bottom:60px;
     border-left: 1px solid rgba(43, 61, 82, 0.30);
     border-right: 1px solid rgba(43, 61, 82, 0.30);
 }
@@ -223,13 +223,15 @@
 .contacts__list{
     position:relative;
     @media(max-width:500px){
-        display: grid;
+        /* display: grid;
         grid-template-columns:100% 100%;
         width:100%;
         height:100%;
         /* gap:20px; */
-        overflow:auto;
-        padding-bottom: 20px;
+        /* overflow:auto;
+        padding-bottom: 20px;  */
+        display:none;
+        visibility:hidden;
     }
     @media(min-width:501px) and (max-width:1100px){
         display:flex;
@@ -248,12 +250,61 @@
         padding-bottom: 40px;
     }
 }
+.contacts__list1{
+    @media(max-width:500px){
+        display: grid;
+        grid-template-columns:100% 100%;
+        width:100%;
+        height:100%;
+        /* gap:20px; */
+        overflow:auto;
+        padding-bottom: 20px; 
+
+    }
+    @media(min-width:500px){
+        display:none;
+        visibility:hidden;
+    }
+}
+.contacts__list3{
+    @media(max-width:500px){
+        display: grid;
+        grid-template-columns:100% 100% 100%;
+        width:100%;
+        height:100%;
+        /* gap:20px; */
+        overflow:auto;
+        padding-bottom: 20px; 
+
+    }
+    @media(min-width:500px){
+        display:none;
+        visibility:hidden;
+    }
+}
+.contacts__list4{
+    @media(max-width:500px){
+        display: grid;
+        grid-template-columns:100% 100% 100% 100%;
+        width:100%;
+        height:100%;
+        /* gap:20px; */
+        overflow:auto;
+        padding-bottom: 20px; 
+
+    }
+    @media(min-width:500px){
+        display:none;
+        visibility:hidden;
+    }
+}
 .contacts__list_container{
     @media(max-width:500px){
         padding-left:7%;
         padding-right:7%;
     }
 }
+
 /* .contacts__list_container:nth-child(1){
     @media(max-width:500px){
         padding-left:15px;
@@ -412,13 +463,30 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media(max-width:500px){
+        /* padding-left:7%;
+        padding-right:7%; */
+        display:none;
+        visibility:hidden;
+    }
 }
+/* .arrowsBottom_containerMobile{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left:7%;
+    padding-right:7%;
+    @media(min-width:500px){
+        display:none;
+        visibility:hidden;
+    }
+} */
 .contact__container_pages{
     display: flex;
     align-items: center;
     justify-content: center;
     gap:4px;
-    @media(max-width:800px){
+    @media(max-width:500px){
         display: none;
         visibility: hidden;
     }
