--- a/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
+++ b/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
@@ -367,17 +367,24 @@
     }
     @media(min-width:501px) and (max-width:1100px){
         width:100%;
-
+        max-width:258px;
+        max-height:253px;
     }
     @media(min-width:1101px) and (max-width:1200px){
         width:100%;
         height: 200px;
+        max-width:258px;
+        max-height:253px;
     }
     @media(min-width:1201px) and (max-width:1300px){
         height: 200px;
+        max-width:258px;
+        max-height:253px;
     }
     @media(min-width:1301px){
         min-height: 253px;
+        max-width:258px;
+        max-height:253px;
     }
 }
 .contacts__name{
