--- a/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
+++ b/src/components/ContactsComponentData/ContactsSalesGroup/ContactsSalesGroup.module.css
@@ -250,13 +250,13 @@
         padding-bottom: 40px;
     }
 }
-.contacts__list1{
+/* .contacts__list1{
     @media(max-width:500px){
         display: grid;
         grid-template-columns:100% 100%;
         width:100%;
         height:100%;
-        /* gap:20px; */
+        
         overflow:auto;
         padding-bottom: 20px; 
 
@@ -272,7 +272,7 @@
         grid-template-columns:100% 100% 100%;
         width:100%;
         height:100%;
-        /* gap:20px; */
+       
         overflow:auto;
         padding-bottom: 20px; 
 
@@ -288,7 +288,7 @@
         grid-template-columns:100% 100% 100% 100%;
         width:100%;
         height:100%;
-        /* gap:20px; */
+        
         overflow:auto;
         padding-bottom: 20px; 
 
@@ -297,7 +297,7 @@
         display:none;
         visibility:hidden;
     }
-}
+} */
 .contacts__list_container{
     @media(max-width:500px){
         padding-left:7%;
